src/objects/Class_Offering__c.object
<CustomObject>
    <description>It will hold the Training Date and Time details.</description>
    <fields>
        <fullName>AvailableSeats__c</fullName>
        <description>It hold the number of available seats.</description>
        <formula>IF( max_capacity__c &lt; Registered_Seats__c,0, max_capacity__c -  Registered_Seats__c)</formula>
        <label>Available Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Role_O_T__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It associate with Chapter Role O &amp; T.</description>
        <label>Chapter Role O&amp;T</label>
        <referenceTo>Chapter_Role_O_T__c</referenceTo>
        <relationshipName>Class_offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter__c</fullName>
        <description>It capture the chapter name.</description>
        <formula>Chapter_Role_O_T__r.Chapter_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_ID__c</fullName>
        <description>This field contains the LMS Course id</description>
        <label>Course ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Learning_Path_Code__c</fullName>
        <description>Course code or Learning Path Code For Intellum</description>
        <inlineHelpText>Specific course code or learning path code for Intellum courses.</inlineHelpText>
        <label>Course/ Learning Path Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>This field will store the course name information</description>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>It will capture the date information about the training started date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field holds the description for the course</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>It will capture the starting time information, about the orientation and training program</description>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>It will capture the location of orientation and training program</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orientation_and_Training__c</fullName>
        <description>It hold the orientation and training name.</description>
        <formula>Chapter_Role_O_T__r.Orientation_Training__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orientation and Training</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Seats__c</fullName>
        <description>It will display count of volunteer training records registered for the training.</description>
        <label>Registered Seats</label>
        <summaryFilterItems>
            <field>Volunteer_Orientation_Training__c.Volunteer_Attendance__c</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Orientation_Training__c.Class_Offering__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>It will capture the starting time information, about the orientation and training program</description>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>It will capture type value about the orientation and training,whether the training taken in online or in person</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Type__c</fullName>
        <description>It will capture the information about the type of volunteer.</description>
        <label>Volunteer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webinar_URL__c</fullName>
        <description>URL for Virtual - Instructor lead courses</description>
        <inlineHelpText>Enter URL for GoToMeeting, or other virtual environment</inlineHelpText>
        <label>Webinar URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>max_capacity__c</fullName>
        <description>It will capture,number of members can participate to the training.</description>
        <inlineHelpText>If Virtual Self Paced class offering, leave max capacity blank. Courses will not be displayed for volunteers if max capacity is reached or if capacity is set as zero.</inlineHelpText>
        <label>Max Capacity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Class Offering</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Orientation_and_Training__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>max_capacity__c</columns>
        <columns>Registered_Seats__c</columns>
        <columns>Location__c</columns>
        <columns>Chapter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Class_Offerings_LMS</fullName>
        <columns>NAME</columns>
        <columns>Orientation_and_Training__c</columns>
        <columns>Registered_Seats__c</columns>
        <columns>Course_Name__c</columns>
        <columns>Course_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Class_Offering__c.Virtual_Self_Paced</value>
        </filters>
        <label>Class Offerings LMS</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Class_Offerings_Next_90_days</fullName>
        <columns>NAME</columns>
        <columns>Orientation_and_Training__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>max_capacity__c</columns>
        <columns>Registered_Seats__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <label>Class Offerings Next 90 days</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Class offering Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Offerings</pluralLabel>
    <recordTypes>
        <fullName>In_Person</fullName>
        <active>true</active>
        <description>Class Offering Training for In Person</description>
        <label>In-Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>Virtual_Instructor_Lead</fullName>
        <active>true</active>
        <description>Class Offering Training for Virtual - Instructor Lead</description>
        <label>Virtual - Instructor Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Virtual_Self_Paced</fullName>
        <active>true</active>
        <description>Class Offering Training for Virtual Self Paced</description>
        <label>Virtual - Self Paced</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>